# AgentCIvic

./: .gitignore  README.md  test_asi_endpoint.py
backend/: .env.example  .gitignore  agentiq_openapi.json  env_config.py  example.env  requirements.txt  run_historical.sh  start_services.ps1  stop_services.ps1  test_main.py  zone2_code_explanation.md
backend/agentiq/: README.md  pyproject.toml
backend/agentiq/configs/: agentcivic_workflow.yml
backend/agentiq/src/agentcivic_agentiq/: register.py  workflow.py
backend/agentiq/src/agentcivic_agentiq.egg-info/: PKG-INFO  SOURCES.txt
backend/agents/: __init__.py  arbiter.py  city_state.py  nemotron_client.py  policy_playbook.json  proposer.py  rag.py  redteam.py  schemas.py
backend/api/: __init__.py  app.py  main.py  models.py  nemotron_client.py  run.sh  runner.py  scoring.py
backend/budget/: compute_budget_metrics.py  compute_department_summary.py  extract_sf_budget.py
backend/config/: __init__.py  paths.py  settings.py
backend/fetchai_agents/: __init__.py  bureau.py  orchestrator.py  proposer_agent.py  redteam_agent.py  verifier_agent.py
backend/intake/: api_client.py  config.py  process_historical.py  process_live.py  processor.py
backend/metrics/: compute_fairness_metrics.py  compute_neighborhood_signals.py
backend/schemas/: incident.schema.json
backend/scripts/: fetch_categories.py  fetch_la_data.py  populate_live_test_data.py  simulate_live_stream.py  trigger_zone2.py  verify_categories.py
backend/sim/: policies.py  simulator.py  (+1 more)
frontend/: README.md  package-lock.json  package.json
(+43 files in other folders)
